--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "fcm-node": "^1.6.1",
+    "fs": "^0.0.1-security",
     "next": "^13.4.9",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "stream": "^0.0.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
